# Tarzan

./: LICENSE  README.md  design.md  pyproject.toml  tarzan.py
installer/: PostInstallText.txt  PreInstallText.txt  TarzanInnoSetup.iss
sample/: input.csv  output.csv  reference.csv
sample/analyze/input/: all_channels.csv
sample/analyze/multi_channel/: reference.csv
sample/analyze/output/: all_channel_analysis.csv
sample/analyze/single_channel/: all_channels.csv  reference.csv
sample/convert/output/: output_wfm_to_csv.csv
