[project]
name = "tarzan"
version = "0.1.0"
description = "Tarzan helps to analyze waveform data (like from oscilloscope) and compare against a reference file. It then calculates the timing for the different segments for the waveform and generates an output CSV report."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.1",
    "pandas>=2.3.3",
    "tm-data-types>=0.2.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]
